--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
+                        "allowedCommonJsDependencies": ["qrcode"],
                         "outputPath": "dist/riversurf-angular",
                         "index": "src/index.html",
                         "main": "src/main.ts",
