--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "dexie": "^3.0.3",
     "hammerjs": "^2.0.8",
+    "ng-qrcode": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
