--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
                             "src/favicon.ico",
                             "src/assets",
                             "src/manifest.json",
-                            "src/.htaccess"
+                            "src/.htaccess",
+                            "src/manifest.webmanifest"
                         ],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -45,7 +46,9 @@
                                 "src/styles"
                             ]
                         },
-                        "scripts": []
+                        "scripts": [],
+                        "serviceWorker": true,
+                        "ngswConfigPath": "ngsw-config.json"
                     },
                     "configurations": {
                         "production": {
@@ -108,7 +111,8 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets",
+                            "src/manifest.webmanifest"
                         ],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
